Fix for video covering full width on mobile devices.

--- a/src/home/style.css
+++ b/src/home/style.css
@@ -193,7 +193,6 @@
 }
 
 #wo > div > iframe {
-    width: 100%;
     height: 500px;
     max-width: 1000px;
     margin: 0 var(--m3);
